added multi-restaurant support with dynamic menus and moved several js scripts to new files

--- a/main.html
+++ b/main.html
@@ -86,7 +86,7 @@
 
     <script>
         function goToPlaceOrder() {
-            window.location.href = './place-order.html'; // Replace with your desired URL
+            window.location.href = './place-order.html'; // advance to place-order page
         }
 </script>
   </body>
