--- a/login.html
+++ b/login.html
@@ -34,6 +34,7 @@
             >Email</label
           >
           <input
+            name="email"
             type="email"
             required
             class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-500"
@@ -46,6 +47,7 @@
             >Password</label
           >
           <input
+            name="password"
             type="password"
             required
             class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-500"
@@ -81,6 +83,7 @@
         <button
           type="submit"
           class="w-full bg-red-500 text-white py-3 rounded-full text-lg font-semibold hover:bg-red-600 transition"
+          
         >
           Sign In
         </button>
@@ -97,7 +100,7 @@
       </form>
     </div>
 
-    <script src="./login-validation.js">
+    <script src="./scripts/login-validation.js">
     </script>
   </body>
 </html>
