added more restaurants, food items, and relative photos

--- a/main.html
+++ b/main.html
@@ -84,10 +84,6 @@
       </div>
     </div>
 
-    <script>
-        function goToPlaceOrder() {
-            window.location.href = './place-order.html'; // advance to place-order page
-        }
-</script>
+    <script src="/scripts/goto-place-order.js"></script>
   </body>
 </html>
